-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.6, 5.2.0
-
None
QSqlDatabasePrivate::addDatabase: duplicate connection name 'QHelpCollectionHandler-4680635008-4', old connection removed. QSqlQuery::prepare: no driver QSqlQuery::prepare: no driver Error registering namespace ' "org.qt-project.qtwidgets.520" ' from file ' "~/Qt5.2.0/5.2.0/clang_64/doc/qtwidgets.qch" ': "Cannot register namespace 'org.qt-project.qtwidgets.520'!" Segmentation fault: 11
- relates to
-
QTBUG-35562 Issues to be fixed in Qt 5.2.1
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36480 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 76643,1 | Fix crashes in QtHelp when too many connections are made | release | qt/qttools | Status: MERGED | +2 | 0 |
| 90586,3 | Fix crashes in QtHelp when too many connections are made | 4.8 | qt/qt | Status: MERGED | +2 | 0 |